# ddns6

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
src/: cloudflare.rs  config.rs  dyndns2.rs  error.rs  http.rs  ipv6.rs  main.rs  state.rs
