[package]
name = "ddns6"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo"]
description = "IPv6 DynDNS daemon that combines dynamic prefixes with static Interface IDs"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP server framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for Cloudflare API
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# IPv6 parsing and handling
ipnet = "2.9"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing utilities
wiremock = "0.6"
